--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ng-jhipster": "0.12.0",
     "ngx-cookie": "4.0.2",
     "ngx-infinite-scroll": "8.0.1",
+    "ngx-textarea-autosize": "^2.0.3",
     "ngx-webstorage": "5.0.0",
     "rxjs": "6.5.3",
     "swagger-ui-dist": "3.24.3",
