--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,8 +9,14 @@
       "error",
       {
         "lintFile": "./tslint.json"
+      },
+      {
+        // note you must disable the base rule as it can report incorrect errors
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"]
       }
     ],
+
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
