--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "bootstrap": "4.4.1",
+    "bootswatch": "^4.5.0",
     "moment": "2.24.0",
     "ng-jhipster": "0.12.0",
     "ngx-cookie": "4.0.2",
